# SignalBoost

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
requirements/: Makefile  local.in  local.txt  main.in  main.txt  test.in  test.txt
signalboost/features/: feature.py
signalboost/registry/: pipeline.py
tests/features/: feature_test.py
