[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SignalBoost"
version = "0.0.1"
authors = [
  { name="Blake Hull", email="blakeologist@gmail.com" },
]
description = "A Super Simple Feature Store"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: OS Independent",
]